<resources>
    <string name="app_name">TaskEaze</string>
    <string name="logo_image_desc">Logo Image</string>
    <string name="comm_image_desc">An icon</string>
    <string name="enter_your_mobile">Enter Your Mobile Number</string>
    <string name="mobile_otp_txt">We shall send you a 4 digit One Time Password</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="sendme_otp_btn">Send Me OTP</string>
    <string name="otp_send_txt">A verification code has been sent to your mobile number</string>
    <string name="otp_verify_heading">OTP Verification</string>
    <string name="otp_enter">Enter the OTP send to</string>
    <string name="submit_txt">Submit</string>
    <string name="cancel_txt">Cancel</string>
    <string name="resend_otp_txt">Resend OTP</string>
    <string name="countrycode">+1</string>
    <string name="skip_otp">Skip OTP</string>
    <string name="home_txt">Home</string>
    <string name="performance_txt">Performance</string>
    <string name="chat_txt">Chat</string>
    <string name="claim_txt">Claim</string>
    <string name="myprofile_txt">My Profile</string>
    <string name="payslip_txt">Payslips</string>
    <string name="leaves_txt">Leaves</string>
    <string name="nav_header_desc">Taskeaze image</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="meetings_txt">Meetings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment_claim">Claim Submission</string>
    <string name="meetings">Meetings</string>
    <string name="version_txt">Version</string>
    <string name="justErrorCode">Error Code</string>
    <string name="alert">Alert</string>
    <string name="otp_sent_txt">"Enter 6 digit OTP send to - "</string>
    <string name="OtpVerification">OTP Verification</string>
    <string name="attendance_txt">Attendance</string>
    <string name="WelcomeTo">Welcome To</string>
    <string name="check_in">Check In</string>
    <string name="location_txt">Location: </string>
    <string name="time_test">10:00 AM</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="work_hrs">Working Hrs</string>
    <string name="date_test">Friday,April 5</string>
    <string name="check_out">Check Out</string>
    <string name="Nametxt">Name</string>
    <string name="Namehint">Name</string>
    <string name="txtUserName">User Name</string>
    <string name="widget_labelled_spinner_errorText">You must choose an item.</string>

    <string name="AddressTxt">Address</string>
    <string name="AddressHint">Address</string>
    <string name="hintUserName" />

    <string name="EmailHint">Email</string>
    <string name="DeptTxt">Department</string>
    <string name="DeptHint">Department</string>
    <string name="Phonetxt">Phone Number</string>
    <string name="Phonehint">Phone Number</string>
    <string name="EmaiTxt">Email</string>
    <string name="edit_button_description">Edit profile</string>
    <string name="client_name">Client Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="location">Location</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="purpose">Visit Purpose</string>
    <string name="mot">Travel By</string>
    <string name="intime">In Time</string>
    <string name="outtime">Out Time</string>
    <string name="notes">Notes</string>
    <string name="followup">Follow up</string>
    <string name="followupdate">Follow Up Date</string>
    <string name="followuptime">Follow Up Time</string>
    <string name="attachment">Attachment</string>
    <string name="date">Date</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDi-AwW65oOxzAzbDbBqrQ-sg2xzJOibRU
    </string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="alert_txt">Alert</string>
    <string name="app_close_txt">"Do you want to close "</string>

    <string-array name="mot">
        <item>--Select--</item>
        <item>Car</item>
        <item>Motorcycle</item>
        <item>Truck</item>
        <item>Semi-Truck</item>
        <item>Trike</item>
        <item>Train</item>
        <item>Flight</item>
    </string-array>

    <string-array name="purpose">
        <item>--Select--</item>
        <item>Lead Meeting</item>
        <item>Sales Meeting</item>
        <item>Report Meeting</item>
        <item>Followup Meeting</item>
        <item>Support Meeting</item>
    </string-array>

    <string-array name="leaveTypes">
        <item>Sick Leave</item>
        <item>Vacation</item>
        <item>Paid Leave</item>
        <item>Unpaid Leave</item>
        <item>Combo Off</item>
    </string-array>

    <string name="txtMessageLeft">His Message</string>
    <string name="txtTimeLeft">11/02/2023 01: 59PM</string>
    <string name="txtReadLeft">Delivered</string>
    <string name="txtTimeRight">02/01/1990 06:19PM</string>
    <string name="txtMessageRight">Hello world</string>
    <string name="txtReadRight">DeliveredRight</string>
    <string name="txtNameptv">His name</string>
    <string name="txtOnline">Online</string>
    <string name="txtReceiverName_Chat">Receiver name</string>
    <string name="txtOnlineStatus">Online status</string>
    <string name="txtHintMessage">Input message</string>
    <string name="contentDesMessageSend">Message send</string>
    <string name="contentDesImageBlock">Image block</string>
    <string name="txtDeliveredLeft">Delivered</string>
    <string name="txtNameChatList">User name</string>
    <string name="txtLastMessage">Last message</string>

    <string name="txtLeaveRequestTitle">Leave Request</string>
    <string name="txtViewLeaveStartDate">Start Date</string>
    <string name="hintLeaveStartDate">Enter Leave Start Date</string>
    <string name="txtViewLeaveEndDate">End Date</string>
    <string name="hintLeaveEndDate">Enter Leave End Date</string>
    <string name="btnLeaveRequest">Send Leave Request</string>
    <string name="txtRequestStatus">Status</string>
    <string name="txtApprove">Approve</string>
    <string name="txtDeny">Deny</string>
    <string name="txtConfirm">Confirm</string>
    <string name="Info">Info</string>
    <string name="txtViewLeaveType">Leave Type</string>


</resources>