<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/req_for_mobile_content_base"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/top_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingTop="30dp"
        android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:visibility="visible"
                android:layout_gravity="center"
                android:src="@mipmap/ic_taskeaze"
                android:contentDescription="@string/logo_image_desc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/top_ll"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/enter_your_mobile"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/mobile_otp_txt"
                android:layout_margin="4dp"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/textbox_layout">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:text="@string/countrycode"
                            android:textSize="20sp" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:background="@color/colorLiteGrey"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/mobilenumber_edt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:background="@color/colorTransparent"
                            android:gravity="center"
                            android:inputType="number"
                            android:hint="@string/mobile_hint"
                            android:maxLength="10"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/activity_req_for_mobile_no_generate_otp_button_id"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:text="@string/sendme_otp_btn"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>